# Define

./: LICENSE  README.md  pyproject.toml
.github/workflows/: sonarqube.yml
src/define/: __init__.py  applicatiom.py  application.py  command.py
src/define/models/: __init__.py  definition.py  entry.py  pronunciation.py
src/define/services/: __init__.py  dictionary_service.py  thesaurus_service.py
src/define/ui/: __init__.py  ui.py  ui_formatter.py
src/define/utils/: __init__.py  api_client.py  config_manager.py  directory_manager.py  service_base.py  text_processor.py
